Added ext_umad files to libinetdisc
ext_umad ("extended umad") provides an interface and utilities for
handling planarized HCAs. The planarized HCAs appear as 2 separate
devices on umad_get_cas output, and the ext_umad interface allows to
group the devices together, and find matching devices.

Signed-off-by: Amir Nir <anir@nvidia.com>

--- a/libibnetdisc/CMakeLists.txt
+++ b/libibnetdisc/CMakeLists.txt
@@ -1,11 +1,13 @@
 publish_headers(infiniband
+  ibnetdisc_ext_umad.h
   ibnetdisc.h
   ibnetdisc_osd.h
   )
 
 rdma_library(ibnetdisc libibnetdisc.map
   # See Documentation/versioning.md
-  5 5.1.${PACKAGE_VERSION}
+  5 5.2.${PACKAGE_VERSION}
+  ibnetdisc_ext_umad.c
   chassis.c
   ibnetdisc.c
   ibnetdisc_cache.c
