--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: cmake (>= 2.8.11),
                libudev-dev,
                ninja-build,
                pandoc,
-               pkg-config,
+               pkgconf,
                python3-dev,
                python3-docutils,
                valgrind [amd64 arm64 armhf i386 mips mips64el mipsel powerpc ppc64 ppc64el s390x]
