--- a/debian/rules
+++ b/debian/rules
@@ -29,12 +29,12 @@ DH_AUTO_CONFIGURE := "--" \
 		     "-DDISTRO_FLAVOUR=Debian" \
 		     "-DCMAKE_BUILD_TYPE=Release" \
 		     "-DCMAKE_INSTALL_SYSCONFDIR:PATH=/etc" \
-		     "-DCMAKE_INSTALL_SYSTEMD_SERVICEDIR:PATH=/lib/systemd/system" \
+		     "-DCMAKE_INSTALL_SYSTEMD_SERVICEDIR:PATH=/usr/lib/systemd/system" \
 		     "-DCMAKE_INSTALL_INITDDIR:PATH=/etc/init.d" \
 		     "-DCMAKE_INSTALL_LIBEXECDIR:PATH=/usr/lib" \
 		     "-DCMAKE_INSTALL_SHAREDSTATEDIR:PATH=/var/lib" \
 		     "-DCMAKE_INSTALL_RUNDIR:PATH=/run" \
-		     "-DCMAKE_INSTALL_UDEV_RULESDIR:PATH=/lib/udev/rules.d" \
+		     "-DCMAKE_INSTALL_UDEV_RULESDIR:PATH=/usr/lib/udev/rules.d" \
 		     "-DCMAKE_INSTALL_PERLDIR:PATH=/usr/share/perl5" \
 		     "-DENABLE_STATIC=1" \
 		     $(EXTRA_CMAKE_FLAGS)
