mlx5: Introduce mlx5dv_reg_dmabuf_mr() API
Introduce mlx5dv_reg_dmabuf_mr() API to let applications register MR
based on dma-buf with specific mlx5 device flags.

Signed-off-by: Yishai Hadas <yishaih@nvidia.com>

--- a/providers/mlx5/man/CMakeLists.txt
+++ b/providers/mlx5/man/CMakeLists.txt
@@ -43,6 +43,7 @@ rdma_man_pages(
   mlx5dv_query_device.3
   mlx5dv_query_port.3.md
   mlx5dv_query_qp_lag_port.3.md
+  mlx5dv_reg_dmabuf_mr.3.md
   mlx5dv_reserved_qpn_alloc.3.md
   mlx5dv_sched_node_create.3.md
   mlx5dv_ts_to_ns.3
