--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -716,6 +716,8 @@ add_subdirectory(providers/cxgb4) # NO SPARSE
 add_subdirectory(providers/efa)
 add_subdirectory(providers/efa/man)
 add_subdirectory(providers/erdma)
+add_subdirectory(providers/hbl)
+add_subdirectory(providers/hbl/man)
 add_subdirectory(providers/hns)
 add_subdirectory(providers/hns/man)
 add_subdirectory(providers/irdma)
