--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,6 +185,9 @@ include(RDMA_DoFixup)
 include(publish_headers)
 include(rdma_functions)
 include(pyverbs_functions)
+
+check_c_compiler_flag("-Wcast-align=strict" HAVE_WCAST_ALIGN_STRICT)
+
 if (NO_MAN_PAGES)
   # define empty stub functions to omit man page processing
   function(rdma_man_pages)
